--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,34 @@
     padding : 0;
     margin : 0;
 }
-
+html,
 body {
-    background : white;
-    color : black;
+    color: lightslategrey;
+    background: slategray;
+	height:100%;
+}
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#header {
+    padding : 20px;
+    background: linear-gradient(lavender, lavender, lavender, lavender, lightslategrey);
+}
+#content {
+    background: lightslategrey;
+    color: lavender;
+    width: 600px;
+    margin-left : 10px;
+    padding-left : 10px;
+	padding-bottom:30px;   /* Height of the footer element */
+}
+#footer {
+    padding : 5px;
+	width:100%;
+	height:30px;
+	position:absolute;
+	bottom:0;
+	left:0;
+    background: linear-gradient(lightslategrey, lavender, lavender, lavender, lavender);
 }
