--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,100 @@
+/* Theme Colours */
+html, body, #page-top, #header, #footer  {
+    background: lavender;
+    color: lightslategray;
+}
+
+#content, #sidebar, #nav a{
+    background: lightslategrey;
+    color: lavender;
+}
+
+#nav a {
+    border-top: 1px solid slategray;
+    border-left: 1px solid slategray;
+    border-right: 1px solid slategray;
+}
+
+/* Fonts */
+
+html,
+body {
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+/* Curved Tab edges */
+
+#nav a {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 2px;
+}
+
+/* Dimensions */
+
 * {
     padding : 0;
     margin : 0;
 }
 html,
 body {
-    color: lightslategrey;
-    background: slategray;
 	height:100%;
 }
+
+#page-top {
+    height: 75px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 #wrapper {
-	min-height:100%;
+    min-height:100%;
 }
-#header {
-    padding : 20px;
-    background: linear-gradient(lavender, lavender, lavender, lavender, lightslategrey);
+#header h1 {
+    padding: 10px 2% 5px;
 }
-#content {
-    background: lightslategrey;
-    color: lavender;
-    width: 600px;
-    margin-left : 10px;
-    padding-left : 10px;
-	padding-bottom:30px;   /* Height of the footer element */
-}
-#footer {
+#nav a {
     padding : 5px;
-	width:100%;
-	height:30px;
-	position:absolute;
-	bottom:0;
-	left:0;
-    background: linear-gradient(lightslategrey, lavender, lavender, lavender, lavender);
+    margin: 0 0 0 -4px;
+}
+
+#nav {
+    padding: 0 0 0 4px;
+    position: fixed;
+    right : 30%;
+    left : 2%;
+    top: 55px; /* Height of heading + padding and margins */
+}
+
+#content, #sidebar {
+    top: 75px; /* Height of header and nav */
+    bottom:20px; /* Height of the footer element */
+    padding: 10px;
+}
+
+#content {
+    right: 30%;
+    left : 2%;
+    position: absolute;
+}
+
+#sidebar {
+    position: fixed;
+    right: 2px;
+    left: 72%;
+}
+
+#footer {
+
+    vertical-align: middle;
+    text-align: right;
+    padding-left: 240px; /* chrome status bar intrudes here - in case I add more to my footer, this padding should stop me from forgetting */
+    padding-right: 10px;
+
+    position: fixed;
+    height: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
