Some tweaks to the ribbon, to make it fit better.
 I have a feeling I'll need to revisit this when I work on mobile layout.

 Closes #1

--- a/template/base.html
+++ b/template/base.html
@@ -27,7 +27,7 @@
     <div id="page-top">
         <div id="header">
             <h1> {{ site_name }} | {{ page_name }} </h1>
-            <span id="forkongithub"><a href="https://github.com/alistair-broomhead/theheadofabroom.pythonanywhere.com">Fork me on GitHub</a></span>
+            <span id="forkongithub"><a href="https://github.com/alistair-broomhead/theheadofabroom.pythonanywhere.com">See me on GitHub</a></span>
         </div>
         <div id="nav">
             {% for app in site.get('apps') %}
