--- a/template/home.html
+++ b/template/home.html
@@ -16,3 +16,7 @@
         {% endfor %}
     </list>
 {% endblock %}
+
+{% block sidebar %}
+    <span> This will be a fixed sidebar, but there's nothing here yet </span>
+{% endblock %}
