--- a/static/css/gh-fork-ribbon.css
+++ b/static/css/gh-fork-ribbon.css
@@ -4,10 +4,10 @@
     text-decoration: none;
     font-family: arial, sans-serif;
     text-align: center;
+    vertical-align: middle;
     font-weight: bold;
-    padding: 5px 40px;
-    font-size: 1rem;
-    line-height: 2rem;
+    padding: 5px 5px;
+    font-size: 8pt;
     right: 0;
     transition: 0.5s;
 }
@@ -33,23 +33,23 @@
     top: auto;
 }
 
-@media screen and (min-width: 800px) {
+@media screen {
     #forkongithub {
         position: absolute;
         display: block;
         top: 0;
         right: 0;
-        width: 200px;
+        width: 120px;
         overflow: hidden;
-        height: 200px;
+        height: 120px;
         z-index: 9999;
     }
 
     #forkongithub a {
-        width: 200px;
+        width: 150px;
         position: absolute;
-        top: 60px;
-        right: -60px;
+        top: 25px;
+        right: -40px;
         transform: rotate(45deg);
         -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
