--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,15 @@ body {
     padding : 0;
     margin : 0;
 }
+
+hr {
+    margin : 1em;
+}
+
+li {
+    padding: 0.5em;
+}
+
 html,
 body {
 	height:100%;
