--- a/template/base.html
+++ b/template/base.html
@@ -5,7 +5,6 @@
 <head>
     <title> {{ site_name }} | {{ page_name }} </title>
     <link rel="stylesheet" type="text/css" href="/static/css/font-size.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/gh-fork-ribbon.css">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     {% block head %}{% endblock %}
 </head>
@@ -25,18 +24,24 @@
         © Copyright {{ site.get('copyright_year') }} {{ site.get('author') }}
     </small>
     <div id="page-top">
-        <div id="header">
-            <h1> {{ site_name }} | {{ page_name }} </h1>
-            <span id="forkongithub"><a href="https://github.com/alistair-broomhead/theheadofabroom.pythonanywhere.com">See me on GitHub</a></span>
-        </div>
-        <div id="nav">
-            {% for app in site.get('apps') %}
-                {% set app_name = app.get('name') %}
-                {% set app_url = app.get('url') %}
-                <a href="{{ app_url }}"
-                   {%  if app_name == page_name %} class="nav.current"
-                   {% else %} class="nav.other" {%  endif %} >{{ app_name }}</a>
-            {% endfor %}
+        <div>
+            <div id="header">
+                <span id="page-title"> {{ page_name }} </span>
+            </div>
+            <div id="nav">
+                {% for app in site.get('apps') %}
+                    {% set app_name = app.get('name') %}
+                    {% set app_url = app.get('url') %}
+                    <a href="{{ app_url }}"
+                       {%  if app_name == page_name %} class="nav.current"
+                       {% else %} class="nav.other" {%  endif %} >{{ app_name }}</a>
+                {% endfor %}
+            </div>
+            <div id="github">
+                <a href="https://github.com/alistair-broomhead/theheadofabroom.pythonanywhere.com">
+                    See me on GitHub
+                </a>
+            </div>
         </div>
     </div>
     {% block onload %}
